--- a/index.html
+++ b/index.html
@@ -290,6 +290,9 @@
     <img src="/images/LUMOS_LAB_1280.jpg" alt="Mountains" style="width:20%">
   </div>
 </div>
+
+
+<h1 id="projects">Prejects</h1>
         
 
         
