--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
         
 <div class="row">
   <div class="row">
-    <img src="/images/WechatIMG6.jpeg" alt="Snow" style="width:44%">
-    <img src="/images/LUMOS_Logo.png" alt="Forest" style="width:33%">
+    <img src="/images/CAGAN_cover.png" alt="CAGAN" style="width:33%">
+    <img src="/images/musecl_cover.png" alt="MuseCL" style="width:33%">
   </div>
 </div>
         
