--- a/index.html
+++ b/index.html
@@ -297,8 +297,12 @@
         
 <div class="row">
   <div class="row">
+    <a href="https://hq-lv.github.io/CAGAN.github.io/index-en.html">
     <img src="/images/CAGAN_cover.png" alt="CAGAN" style="width:39%">
+    </a >
+    <a href="https://musecl-demo.streamlit.app/">
     <img src="/images/musecl_cover.png" alt="MuseCL" style="width:39%">
+    </a >
   </div>
 </div>
         
