--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
         
 <h1 id="projects">Project Demos</h1>
-        
+<p>Click the pictures below to explore more about the research project demos!</p>     
 <div class="row">
   <div class="row">
     <a href="https://hq-lv.github.io/CAGAN.github.io/index-en.html">
