--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
         
 <h1 id="projects">Project Demos</h1>
+        <section class="page__content" itemprop="text">
 <p>Click the pictures below to explore more about the research project demos!</p>     
 <div class="row">
   <div class="row">
