--- a/index.html
+++ b/index.html
@@ -292,6 +292,16 @@
 </div>
 </p>
 
+<h1 id="lab">About LUMOS AI Lab</h1>
+        <section class="page__content" itemprop="text">
+<p>Curious about what we do? Learn more about the LUMOS AI Lab in the video below!</p>     
+<div class="row">
+  <div class="row">
+    <video src='/images/musecl-demo_25m.mp4' controls width=720 / alt="scan" style="width:100%">
+    </a >
+  </div>
+</div>
+
         
 <h1 id="projects">Project Demos</h1>
         <section class="page__content" itemprop="text">
