--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@
 <p>Curious about what we do? Learn more about the LUMOS AI Lab in the video below!</p>     
 <div class="row">
   <div class="row">
-    <video src='/images/musecl-demo_25m.mp4' controls width=720 / alt="scan" style="width:100%">
-    </a >
+    <video src='/images/LUMOS_Intro_compress2.mp4' controls width=720 / alt="scan" style="width:100%">
   </div>
 </div>
 
