--- a/index.html
+++ b/index.html
@@ -313,6 +313,9 @@
     <a href="https://musecl-demo.streamlit.app/">
     <img src="/images/musecl_cover.png" alt="MuseCL" style="width:39%">
     </a >
+    <a href="https://urbanhealth-fxmrcfd5dzfrt2hvc7bp6w.streamlit.app/">
+    <img src="/images/CureGraph_Cover.png" alt="CureGraph" style="width:39%">
+    </a >
   </div>
 </div>
         
