--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <div class="author__content">
     <h3 class="author__name">Xiao Zhou 周骁</h3>
-    <p class="author__bio">Assistant Professor GSAI, RUC</p>
+    <p class="author__bio">Associate Professor GSAI, RUC</p>
   </div>
 
   <div class="author__urls-wrapper">
@@ -276,7 +276,7 @@
       
 
       <section class="page__content" itemprop="text">
-        <p>I joined Gaoling School of Artificial Intelligence, Renmin University of China as a tenure-track assistant professor in 2021. Prior to that, I worked as a postdoctoral fellow at the MIT Senseable City Lab. I hold a Ph.D. in computer science from University of Cambridge, UK, supervised by Professor Cecilia Mascolo. My research interest lies primarily in data mining, urban computing, human mobility, social network analysis, and multi-modal learning. I am particularly interested in applications of machine learning techniques in the social sciences, economics, and healthcare for more intelligent policy-making and mobile services.</p>
+        <p>I am currently a tenure-track associate professor at Gaoling School of Artificial Intelligence, Renmin University of China. Prior to that, I worked as a postdoctoral fellow at the MIT Senseable City Lab. I hold a Ph.D. in computer science from University of Cambridge, UK, supervised by Professor Cecilia Mascolo. My research interest lies primarily in data mining, urban computing, human mobility, social network analysis, and multi-modal learning. I am particularly interested in applications of machine learning techniques in the social sciences, economics, and healthcare for more intelligent policy-making and mobile services.</p>
 
 <h1 id="our-team">Our Team</h1>
 
