--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       
 
       <section class="page__content" itemprop="text">
-        <p>I am currently a tenure-track associate professor at Gaoling School of Artificial Intelligence, Renmin University of China. Prior to that, I worked as a postdoctoral fellow at the MIT Senseable City Lab. I hold a Ph.D. in computer science from University of Cambridge, UK, supervised by Professor Cecilia Mascolo. My research interest lies primarily in data mining, urban computing, human mobility, social network analysis, and multi-modal learning. I am particularly interested in applications of machine learning techniques in the social sciences, economics, and healthcare for more intelligent policy-making and mobile services.</p>
+        <p>I am currently a tenure-track Associate Professor at the Gaoling School of Artificial Intelligence, Renmin University of China. Before that, I was a Postdoctoral Fellow at the Senseable City Lab, Massachusetts Institute of Technology (MIT). I received my Ph.D. in Computer Science from the University of Cambridge, supervised by Professor Cecilia Mascolo (FREng). My research focuses on data mining, urban computing, social computing, recommender systems, and large language models. Broadly, I am interested in developing AI-driven methods for the social sciences to enable more intelligent policy-making and human-centered mobile services.</p>
 
 <h1 id="our-team">Our Team</h1>
 
